<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <data>

        <variable
            name="fragment"
            type="com.template.reo.ormasample.ui.home.HomeFragment" />

        <variable
            name="viewModel"
            type="com.template.reo.ormasample.ui.home.HomeViewModel" />
    </data>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/textField_title"
            style="@style/MyTextInputLayout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/base_layout_margin"
            android:layout_marginTop="@dimen/base_layout_margin"
            android:layout_marginEnd="@dimen/base_layout_margin"
            android:hint="@string/label_title"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/edit_title"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@={viewModel.title}" />
        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/textField_content"
            style="@style/MyTextInputLayout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/base_layout_margin"
            android:layout_marginTop="@dimen/base_layout_margin"
            android:layout_marginEnd="@dimen/base_layout_margin"
            android:hint="@string/label_content"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/textField_title">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/edit_content"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@={viewModel.content}" />
        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.button.MaterialButton
            android:id="@+id/button_create"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/base_layout_margin"
            android:layout_marginTop="@dimen/base_layout_margin"
            android:layout_marginEnd="@dimen/base_layout_margin"
            android:onClick="@{() -> fragment.onClickButtonCreate()}"
            android:text="@string/simple_crud_create"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/textField_content" />

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/textField_read_where"
            style="@style/MyTextInputLayout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/base_layout_margin"
            android:layout_marginTop="@dimen/base_layout_margin"
            android:layout_marginEnd="@dimen/base_layout_margin"
            android:hint="@string/label_where"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/button_create">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/edit_read_where"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@={viewModel.readWhere}" />
        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.button.MaterialButton
            android:id="@+id/button_read"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/base_layout_margin"
            android:layout_marginTop="@dimen/base_layout_margin"
            android:layout_marginEnd="@dimen/base_layout_margin"
            android:onClick="@{() -> fragment.onClickButtonRead()}"
            android:text="@string/simple_crud_read"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/textField_read_where" />

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/textField_read_update"
            style="@style/MyTextInputLayout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/base_layout_margin"
            android:layout_marginTop="@dimen/base_layout_margin"
            android:layout_marginEnd="@dimen/base_layout_margin"
            android:hint="@string/label_where"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/button_read">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/edit_read_update"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@={viewModel.updateWhere}" />
        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.button.MaterialButton
            android:id="@+id/button_update"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/base_layout_margin"
            android:layout_marginTop="@dimen/base_layout_margin"
            android:layout_marginEnd="@dimen/base_layout_margin"
            android:onClick="@{() -> fragment.onClickButtonUpdate()}"
            android:text="@string/simple_crud_update"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/textField_read_update" />

        <com.google.android.material.button.MaterialButton
            android:id="@+id/button_delete"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/base_layout_margin"
            android:layout_marginTop="@dimen/base_layout_margin"
            android:layout_marginEnd="@dimen/base_layout_margin"
            android:onClick="@{() -> fragment.onClickButtonDelete()}"
            android:text="@string/simple_crud_delete"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/button_update" />

        <com.google.android.material.button.MaterialButton
            android:id="@+id/button_enable_transaction_sync"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/base_layout_margin"
            android:layout_marginTop="@dimen/base_layout_margin"
            android:layout_marginEnd="@dimen/base_layout_margin"
            android:onClick="@{() -> fragment.onClickButtonEnableTransactionSync()}"
            android:text="@string/button_enable_transaction_sync"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/button_delete" />

        <com.google.android.material.button.MaterialButton
            android:id="@+id/button_no_transaction_sync"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/base_layout_margin"
            android:layout_marginTop="@dimen/base_layout_margin"
            android:layout_marginEnd="@dimen/base_layout_margin"
            android:onClick="@{() -> fragment.onClickButtonNoTransactionSync()}"
            android:text="@string/button_no_transaction_sync"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/button_enable_transaction_sync" />
    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>